--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   image_picker: ^1.0.7
   emoji_picker_flutter: ^3.0.0
   photo_view: ^0.15.0
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +52,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - images/
+     - images/json/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
